# THIH-Clip-Engine

./: .env.example  LOCAL_LAUNCH_CHECKLIST.md  README.md  docker-compose.yml  init.sql
backend/: README.md  pyproject.toml
backend/fonts/: README.md
backend/migrations/: 003_add_thih_clip_scoring.sql
backend/src/: ai.py  config.py  main.py  main_refactored.py  models.py  runtime_settings.py  video_utils.py  worker_main.py  youtube_utils.py
backend/src/api/routes/: tasks.py
backend/src/repositories/: clip_repository.py
backend/src/services/: subscription_email_service.py  task_completion_email_service.py  task_service.py  video_service.py
backend/src/workers/: tasks.py
backend/tests/: test_video_utils_diarization.py
backend/tests/acceptance/: test_clip_intelligence_acceptance.py
backend/tests/unit/: test_ai_models.py  test_ai_prompt.py  test_config_ollama.py  test_task_service.py  test_task_source_settings.py  test_video_service_thih.py
docs/: README.md  api-reference.md  app-guide.md  architecture.md  configuration.md  development.md  setup.md  troubleshooting.md
frontend/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  twitter-image.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/list/: page.tsx
frontend/src/components/: landing-page.tsx
frontend/src/components/admin/: runtime-settings-form.tsx
frontend/src/components/shorts-factory/: ai-instructions.tsx  algorithm-principles.tsx  caption-packet.tsx  (+4 more)
frontend/src/lib/: blog-posts.ts  shorts-factory.ts  social-image.tsx  thih-brand.ts
(+4 files in other folders)
